--- a/index.html
+++ b/index.html
@@ -9,9 +9,25 @@
     <link rel="stylesheet" href="css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
+<main>
 
 <body>
-    <h1>Hi, I'm Lauren Bentley</h1>
+  <h1>Hi, I'm Lauren Bentley</h1>
+  <div class="row justify-content-end align-items-center">
+    <div class="col-md-4">
+      <p>I am a dedicated, hardworking student studying journalism at the Philip Merrill College of Journalism at the University of Maryland, College Park. </p>
+      <p>Alongside journalism, I am also studying Criminology and Criminal Justice as a double major.</p>
+      <p>Over the past two years of college, I have expanded my journalistic and leadership skills with relevant coursework, experience with on-campus publications and leadership roles. </p>
+      <p>I worked as a diversions reporter for a year and a half on The Diamondback, the university’s student-run newspaper.  I was responsible for covering campus entertainment events, while also writing commentaries on arts and pop culture. </p>
+      <p>Additionally, I have enhanced my collaboration and communication skills through on-campus jobs I have held throughout my time at Maryland. I worked as an Office Assistant for the Terrapin Teachers program during my sophomore year. Furthermore, I currently work as a staff member at Ritchie Coliseum, an on-campus student gym. </p>
+    </div>
+    <div class="col-md-8">
+      <img src="img/portfolio-img.jpg" alt="portfolio image" class="img-fluid">
+    </div>
+  </div>
+  
+    
     
 </body>
+</main>
 </html>
