--- a/clips/index.html
+++ b/clips/index.html
@@ -12,6 +12,10 @@
 
 <body>
   <h1>The Diamondback</h1>
+  <a href="../">Home</a>
+  <a href="../resume/">Resume</a>
+  <a href="#">Clips</a>
+  <a href="../contact/">Contact</a>
     
 </body>
 </html>
