--- a/contact/index.html
+++ b/contact/index.html
@@ -12,6 +12,10 @@
 
 <body>
   <h1>Email</h1>
+  <a href="../">Home</a>
+  <a href="../resume/">Resume</a>
+  <a href="../clips/">Clips</a>
+  <a href="#">Contact</a>
     <p>lbentley@terpmail.umd.edu</p>
   <h1>LinkedIn</h1>
 
