--- a/resume/index.html
+++ b/resume/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+  <h1>Resume</h1>
+  <a href="../">Home</a>
+  <a href="#">Resume</a>
+  <a href="../clips/">Clips</a>
+  <a href="../contact/">Contact</a>
   <section class="container">
   <div class="row">
     <div class="row justify-content-evenly align-items-right">
