--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <body>
   <h1>Hi, I'm Lauren Bentley</h1>
+  <a href="#">Home</a>
+  <a href="/resume/">Resume</a>
+  <a href="/clips/">Clips</a>
+  <a href="/contact/">Contact</a>
   <div class="row justify-content-end align-items-center">
     <div class="col-md-4">
       <p>I am a dedicated, hardworking student studying journalism at the Philip Merrill College of Journalism at the University of Maryland, College Park. </p>
