--- a/contact/index.html
+++ b/contact/index.html
@@ -11,13 +11,15 @@
 </head>
 
 <body>
-  <h1>Email</h1>
+  <h1>Contact Me!</h1>
+  <hr>
   <a href="../">Home</a>
   <a href="../resume/">Resume</a>
   <a href="../clips/">Clips</a>
-  <a href="#">Contact</a>
+  <b><a href="#">Contact</a></b>
     <p>lbentley@terpmail.umd.edu</p>
-  <h1>LinkedIn</h1>
+  <h2>LinkedIn</h2>
+  <h2>Email</h2>
 
     
 </body>
