--- a/resume/index.html
+++ b/resume/index.html
@@ -11,65 +11,47 @@
 </head>
 
 <body>
+  <main>
+    <div class="wrapper-main">
   <h1>Resume</h1>
+  <hr>
   <a href="../">Home</a>
-  <a href="#">Resume</a>
+  <b><a href="#">Resume</a></b>
   <a href="../clips/">Clips</a>
   <a href="../contact/">Contact</a>
-  <section class="container">
-  <div class="row">
-    <div class="row justify-content-evenly align-items-right">
-      <div class="col-md-4">
-        <h1>Education</h1>
-        <h2>University of Maryland</h2>
-          <p>Philip Merrill College of Journalism and Crminology and Criminal Justice Department</p>
-          <p>Bachelor of Arts, Journalism and Crminology and Criminal Justice</p>
-        <h1>Journalism Experience</h1>
-        <h2>The East Vision</h2>
-        <h3>Staff Writer and Feature Editor</h3>
-          <p>Served as a writer and editor for monthly print newspaper</p>
-          <p>Pitched multiple stories as a writer, conducted interviews with students and staff of East Grand Rapids High School</p>
-          <p>Designed monthly feature page using Adobe InDesign, tasked with overseeing story writing and editing articles for grammar and AP style</p>
-        <h2>Express Magazine</h2>
-        <h3>Staff Writer</h3>
+        <h2>Education</h2>
+       <p>University of Maryland Philip Merrill College of Journalism and Criminology and Criminal Justice Department | Aug. 2022 - present</p>
+          <p>Expected Graduation May 2026</p>
+          <p>Bachelor of Arts, Journalism/Crminology and Criminal Justice</p>
+        <h2>Journalism Experience</h2>
+          <h3><i>The East Vision</i> | Staff Writer and Feature Editor | Aug. 2019 - May 2022</h3>
+            <p>Served as a writer and editor for monthly print newspaper</p>
+            <p>Pitched multiple stories as a writer, conducted interviews with students and staff of East Grand Rapids High School</p>
+           <p>Designed monthly feature page using Adobe InDesign, tasked with overseeing story writing and editing articles for grammar and AP style</p>
+        <h3><i>Express Magazine</i> | Staff Writer | Feb. 2020 - Feb. 2022</h3>
           <p>Selected as a staff writer for student-run digital art magazine</p>
           <p>Conducted extensive research on unfamiliar topics, integrated and fact-checked information in articles</p>
           <p>Interviewed artists about background, and wrote stories about their artistic process</p>
-    
-        <h2>The Diamondback</h2>
-        <h3>Diversions Reporter</h3>
+        <h3><i>The Diamondback</i> | Diversions Reporter | Jan. 2023 - March 2024</h3>
           <p>Responsible for multiple weekly pitches on campus culture and entertainment</p>
           <p>Attended a myriad of campus events for on-site reporting and interviewing</p>
           <p>Conducted interviews on a weekly basis with University of Maryland students and administrators</p>
-
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="row justify-content-evenly align-items-left">
-      <div class="col-md-4">
-  <h1>Work Experience</h1>
-    <h2>Snapdragon Boutique</h2>
-    <h3>Retail Sales Associate</h3>
+  <h2>Work Experience</h2>
+    <h3><i>Snapdragon Boutique</i> | Retail Sales Associate | Dec. 2021 - Present</h3>
       <p>Interacted with customers and children to assist in finding desired clothing, shoes, etc.</p>
       <p>Folded, unpackaged, and shelved clothing on a daily basis</p>
       <p>Took inventory of items in stock, assisted with upkeep of the facility</p>
-  <h2>Terrapin Teachers</h2>
-  <h3>Office Assistant</h3>
+  <h3><i>Terrapin Teachers</i> | Office Assistant | Feb. 2024 - May 2024</h3>
     <p>Supervised daily office tasks such as filing, answering phones, and taking inventory of supplies</p>
     <p>Assisted students and staff in organization and upkeep of office</p>
     <p>Researched jobs and internships for aspiring teachers </p>
     <p>Assisted in social media marketing and website design </p>
-  <h2>Ritchie Coliseum</h2>
-  <h3>South Campus Facilities Staff</h3>
+  <h3><i>Ritchie Coliseum</i> | South Campus Facilities Staff | Aug. 2024 - Present</h3>
     <p>Assisted with upkeep of facility</p>
     <p>Managed front desk check-in and phones</p>
-  <h1>Skills and Activities</h1>
+  <h2>Skills and Activities</h2>
     <p>Skills: Interviewing, Adobe InDesign & Photoshop, writing, copyediting, communication</p>
   </div>
-  </div>  
-</div>
-</section>
-    
 </body>
+</main>
 </html>
