--- a/contact/index.html
+++ b/contact/index.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lauren Bentley | Contact</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lauren Bentley | Contact</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="../css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </head>
 
-<body>
-  <h1>Contact Me!</h1>
-  <hr>
-  <a href="../">Home</a>
-  <a href="../resume/">Resume</a>
-  <a href="../clips/">Clips</a>
-  <b><a href="#">Contact</a></b>
-    <p>lbentley@terpmail.umd.edu</p>
-  <h2>LinkedIn</h2>
-  <h2>Email</h2>
+<body class="container">
+  <header>
+    <h1>Contact Me!</h1>
+    <hr>
+    <nav>
+      <a href="../">Home</a>
+      <a href="../resume/">Resume</a>
+      <a href="../clips/">Clips</a>
+      <b><a href="#">Contact</a></b>
+    </nav>
+  </header>
+<main>
+  <h2>LinkedIn :</h2>
+  <nav>
+    <p> <a href="https://www.linkedin.com/in/lauren-bentley-259683267/"> My LinkedIn Profile</a></p>
+  </nav>
+  <h2>Email :</h2>
+  <p><b>School</b>: lbentley@terpmail.umd.edu</p>
+  <p><b>Personal</b>: lb04sd@gmail.com</p>
+</main>
 
-    
 </body>
+
 </html>
