--- a/resume/index.html
+++ b/resume/index.html
@@ -1,57 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lauren Bentley | Resume</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lauren Bentley | Resume</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="../css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="container">
+  <header>
+    <h1>Resume</h1>
+    <hr>
+    <nav>
+      <a href="../">Home</a>
+      <b><a href="#">Resume</a></b>
+      <a href="../clips/">Clips</a>
+      <a href="../contact/">Contact</a>
+    </nav>
+  </header>
   <main>
-    <div class="wrapper-main">
-  <h1>Resume</h1>
-  <hr>
-  <a href="../">Home</a>
-  <b><a href="#">Resume</a></b>
-  <a href="../clips/">Clips</a>
-  <a href="../contact/">Contact</a>
-        <h2>Education</h2>
-       <p>University of Maryland Philip Merrill College of Journalism and Criminology and Criminal Justice Department | Aug. 2022 - present</p>
-          <p>Expected Graduation May 2026</p>
-          <p>Bachelor of Arts, Journalism/Crminology and Criminal Justice</p>
-        <h2>Journalism Experience</h2>
-          <h3><i>The East Vision</i> | Staff Writer and Feature Editor | Aug. 2019 - May 2022</h3>
-            <p>Served as a writer and editor for monthly print newspaper</p>
-            <p>Pitched multiple stories as a writer, conducted interviews with students and staff of East Grand Rapids High School</p>
-           <p>Designed monthly feature page using Adobe InDesign, tasked with overseeing story writing and editing articles for grammar and AP style</p>
-        <h3><i>Express Magazine</i> | Staff Writer | Feb. 2020 - Feb. 2022</h3>
-          <p>Selected as a staff writer for student-run digital art magazine</p>
-          <p>Conducted extensive research on unfamiliar topics, integrated and fact-checked information in articles</p>
-          <p>Interviewed artists about background, and wrote stories about their artistic process</p>
-        <h3><i>The Diamondback</i> | Diversions Reporter | Jan. 2023 - March 2024</h3>
-          <p>Responsible for multiple weekly pitches on campus culture and entertainment</p>
-          <p>Attended a myriad of campus events for on-site reporting and interviewing</p>
-          <p>Conducted interviews on a weekly basis with University of Maryland students and administrators</p>
-  <h2>Work Experience</h2>
+    <h2>Education</h2>
+    <p>University of Maryland Philip Merrill College of Journalism and Criminology and Criminal Justice Department |
+      Aug. 2022 - present</p>
+    <p>Expected Graduation May 2026</p>
+    <p>Bachelor of Arts, Journalism/Crminology and Criminal Justice</p>
+    <h2>Journalism Experience</h2>
+    <h3><i>The East Vision</i> | Staff Writer and Feature Editor | Aug. 2019 - May 2022</h3>
+    <p>Served as a writer and editor for monthly print newspaper</p>
+    <p>Pitched multiple stories as a writer, conducted interviews with students and staff of East Grand Rapids High
+      School</p>
+    <p>Designed monthly feature page using Adobe InDesign, tasked with overseeing story writing and editing articles
+      for grammar and AP style</p>
+    <h3><i>Express Magazine</i> | Staff Writer | Feb. 2020 - Feb. 2022</h3>
+    <p>Selected as a staff writer for student-run digital art magazine</p>
+    <p>Conducted extensive research on unfamiliar topics, integrated and fact-checked information in articles</p>
+    <p>Interviewed artists about background, and wrote stories about their artistic process</p>
+    <h3><i>The Diamondback</i> | Diversions Reporter | Jan. 2023 - March 2024</h3>
+    <p>Responsible for multiple weekly pitches on campus culture and entertainment</p>
+    <p>Attended a myriad of campus events for on-site reporting and interviewing</p>
+    <p>Conducted interviews on a weekly basis with University of Maryland students and administrators</p>
+    <h2>Work Experience</h2>
     <h3><i>Snapdragon Boutique</i> | Retail Sales Associate | Dec. 2021 - Present</h3>
-      <p>Interacted with customers and children to assist in finding desired clothing, shoes, etc.</p>
-      <p>Folded, unpackaged, and shelved clothing on a daily basis</p>
-      <p>Took inventory of items in stock, assisted with upkeep of the facility</p>
-  <h3><i>Terrapin Teachers</i> | Office Assistant | Feb. 2024 - May 2024</h3>
+    <p>Interacted with customers and children to assist in finding desired clothing, shoes, etc.</p>
+    <p>Folded, unpackaged, and shelved clothing on a daily basis</p>
+    <p>Took inventory of items in stock, assisted with upkeep of the facility</p>
+    <h3><i>Terrapin Teachers</i> | Office Assistant | Feb. 2024 - May 2024</h3>
     <p>Supervised daily office tasks such as filing, answering phones, and taking inventory of supplies</p>
     <p>Assisted students and staff in organization and upkeep of office</p>
     <p>Researched jobs and internships for aspiring teachers </p>
     <p>Assisted in social media marketing and website design </p>
-  <h3><i>Ritchie Coliseum</i> | South Campus Facilities Staff | Aug. 2024 - Present</h3>
-    <p>Assisted with upkeep of facility</p>
-    <p>Managed front desk check-in and phones</p>
-  <h2>Skills and Activities</h2>
+    <h3><i>Ritchie Coliseum</i> | South Campus Facilities Staff | Aug. 2024 - Present</h3>
+    <p>Assist with upkeep of facility</p>
+    <p>Manage front desk check-in and phones</p>
+    <p>answer customer questions and track rental equipment</p>
+    <h2>Skills and Activities</h2>
     <p>Skills: Interviewing, Adobe InDesign & Photoshop, writing, copyediting, communication</p>
-  </div>
+    </div>
 </body>
 </main>
+
 </html>
